--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "serve": "next start",
     "lint": "next lint",
-    "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
+    "format": "prettier --write \"**/*\" --ignore-path .prettierignore",
     "check-types": "tsc --noEmit --incremental",
     "predeploy": "npm run lint && npm run check-types",
     "vercel": "vercel",
@@ -18,12 +18,18 @@
     "@heroicons/react": "^2.0.11",
     "@noble/curves": "^1.6.0",
     "@noble/hashes": "^1.5.0",
+    "@particle-network/aa": "^2.0.2",
+    "@particle-network/auth": "^1.3.1",
+    "@particle-network/chains": "^1.7.6",
+    "@particle-network/connect-react-ui": "^1.2.1",
+    "@particle-network/connectkit": "^2.0.9",
+    "@particle-network/provider": "^1.3.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@rainbow-me/rainbowkit": "2.1.2",
-    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query": "^5.59.20",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
@@ -51,8 +57,8 @@
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.13.0",
-    "viem": "2.17.4",
-    "wagmi": "2.10.10",
+    "viem": "^2.17.4",
+    "wagmi": "^2.10.10",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
