--- a/Hardhat/package.json
+++ b/Hardhat/package.json
@@ -16,6 +16,7 @@
     "@openzeppelin/contracts": "^4.9.3",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "dotenv": "^16.4.5",
     "ethers": "^6.7.1",
     "yargs": "^17.7.2"
   }
