--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -20,6 +20,7 @@
     "@noble/hashes": "^1.5.0",
     "@particle-network/aa": "^2.0.2",
     "@particle-network/auth": "^1.3.1",
+    "@particle-network/auth-core-modal": "^1.5.2",
     "@particle-network/chains": "^1.7.6",
     "@particle-network/connect-react-ui": "^1.2.1",
     "@particle-network/connectkit": "^2.0.9",
