--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^5.59.20",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@vercel/analytics": "^1.3.2",
     "blo": "^1.0.1",
     "burner-connector": "^0.0.8",
     "chart.js": "^4.4.6",
